--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config ./index.js",
-    "start": "nodemon -r dotenv/config ./index.js"
+    "start": "node -r dotenv/config ./index.js"
   },
   "repository": {
     "type": "git",
