--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "nodemon -r dotenv/config ./index.js",
     "start": "node -r dotenv/config ./index.js",
     "migration": "npx sequelize-cli db:migrate",
-    "migration:fresh": "npx sequelize-cli db:migrate:undo:all"
+    "migration:undo": "npx sequelize-cli db:migrate:undo:all"
   },
   "repository": {
     "type": "git",
