--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
